--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>users-service</artifactId>
+    <artifactId>cart-service</artifactId>
 
     <properties>
         <java.version>17</java.version>
@@ -36,10 +36,6 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
