--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>users-service</module>
         <module>item-service</module>
+        <module>cart-service</module>
     </modules>
 
     <properties>
