create storage service, refactoring flyway migration (change carts and items tables in db), refactoring cart service

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>users-service</module>
         <module>item-service</module>
         <module>cart-service</module>
+        <module>storage-service</module>
     </modules>
 
     <properties>
