--- a/users-service/src/main/resources/application.yaml
+++ b/users-service/src/main/resources/application.yaml
@@ -28,3 +28,8 @@ spring:
     driver-class-name: org.postgresql.Driver
     username: root
     password: 1
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
