--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>cart-service</module>
         <module>storage-service</module>
         <module>discovery-server</module>
+        <module>migration-database-service</module>
     </modules>
 
     <properties>
