added api gateway

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>discovery-server</module>
         <module>migration-database-service</module>
         <module>item-review-service</module>
+        <module>api-gateway</module>
     </modules>
 
     <properties>
