--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>migration-database-service</module>
         <module>item-review-service</module>
         <module>api-gateway</module>
+        <module>authentication-service</module>
     </modules>
 
     <properties>
