--- a/item-review-service/pom.xml
+++ b/item-review-service/pom.xml
@@ -44,6 +44,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.patseev</groupId>
+            <artifactId>jwt-service-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
