--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -52,5 +52,9 @@
             <groupId>ru.patseev</groupId>
             <artifactId>jwt-service-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
