--- a/item-review-service/pom.xml
+++ b/item-review-service/pom.xml
@@ -48,6 +48,10 @@
             <groupId>ru.patseev</groupId>
             <artifactId>jwt-service-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
