added a service for checking inactive accounts and deleting them from the database

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>api-gateway</module>
         <module>authentication-service</module>
         <module>email-sender-service</module>
+        <module>inactive-user-cleanup-service</module>
     </modules>
 
     <properties>
