--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>inactive-user-cleanup-service</module>
         <module>user-service</module>
         <module>account-info-service</module>
+        <module>order-service</module>
     </modules>
 
     <properties>
