--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -22,5 +22,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ru.patseev</groupId>
+            <artifactId>jwt-service-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
